--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,7 @@
-<h3 style="font-family: Calibri">Reyes Final</h3>
+<%- include( "_header") -%>
 
+<h1>Final Exam Application</h1>
+<h3>Select a Task from the Top Navigation Bar</h3>
+
+<%- include( "_footer") -%>
+  
