--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -13,10 +13,10 @@
   <div class="container">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-      <a class="navbar-brand" href="/Home">Reyes' Homepage</a>
+      <a class="navbar-brand" href="/">Reyes' Homepage</a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/Home">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/Sum">Sum of Series</a>
